# fafycat

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  cli.py  example_simulation.py  main.py  pyproject.toml  quick_test.py  run_dev.py  run_fafycat.py  run_prod.py  streamlit_app.py  test_performance.py  test_plan.md  test_settings_manual.py
.github/workflows/: python-app.yml
api/: __init__.py  analytics.py  budgets.py  categories.py  dependencies.py  export.py  ml.py  ml_training_job.py  models.py  services.py  transactions.py  upload.py
docs/: coding-agents.md
docs/media/: README.md  demo-import.csv
plans/local-issues/: 04-data-dir-flag-positioning.md  05-tx-list-negative-limit-dumps-all.md  08-cat-list-bare-array.md  README.md
plans/local-issues/done/: 01-tx-list-limit-zero-zerodivision.md  02-analytics-yoy-bad-years-traceback.md  03-analytics-top-bad-month-traceback.md  06-malformed-toml-traceback.md  07-error-contract-inconsistent.md  09-analytics-breakdown-type-unvalidated.md  10-config-loaded-multiple-times.md  11-budget-show-fallback-vs-empty.md  12-skill-md-drift.md  13-cat-list-inactive-coverage.md
scratch_pads/: experiment_llm_results.json  experiment_llm_results_analysis.md  p1_1_real_probas_results.md
scripts/: annotate_readme_demo_assets.py  capture_readme_demo.cjs  capture_readme_demo.sh  establish_baseline.py  experiment_embeddings.py  experiment_finetune.py  experiment_llm_classify.py  fix_missing_categories.py  import_labeled_data.py  import_synthetic.py  init_db.py  init_prod_db.py  migrate_yearly_budgets.py  reset_and_import.py  train_model.py  tune_lgbm.py
simulations/: README.md  __init__.py  core.py  data_loader.py  data_sources.py  household_savings.py  scenarios.py  visualizations.py
src/fafycat/: __init__.py  __main__.py  app.py  cli.py
src/fafycat/api/: analytics.py  budgets.py  categories.py  dependencies.py  export.py  ml.py  ml_training_job.py  models.py  services.py  transactions.py  upload.py
src/fafycat/cli_query/: __init__.py  date_range.py  output.py  skill_install.py
src/fafycat/core/: config.py  config_file.py  database.py  models.py
src/fafycat/data/: csv_processor.py
src/fafycat/data/skill/: SKILL.md
src/fafycat/ml/: active_learning.py  categorizer.py  cross_validation.py  ensemble_categorizer.py  feature_extractor.py  merchant_mapper.py  naive_bayes_classifier.py  prediction_pipeline.py  sepa_parser.py
src/fafycat/static/css/: components.css
src/fafycat/static/js/: analytics.js
src/fafycat/ui/pages/: import_page.py  review_page.py  settings_page.py
src/fafycat/web/: routes.py
src/fafycat/web/components/: __init__.py  alerts.py  icons.py  layout.py  transaction_table.py
src/fafycat/web/pages/: __init__.py  analytics_page.py  export_page.py  home_page.py  import_page.py  review_page.py  settings_page.py
static/css/: components.css  main.css  theme.css
static/js/: analytics.js  analytics_page.js  analytics_yoy.js  main.js
tests/: conftest.py  fakes.py  test_analytics_api.py  test_api_automation.py  test_app_config.py  test_app_factory.py  test_auto_predict_manual.py  test_auto_predict_post_training.py  test_cli.py  test_config_file.py  test_csv_processing.py  test_date_range.py  test_feature_extraction.py  test_import_function.py  test_ml_api.py  test_ml_e2e.py  test_ml_endpoints_simple.py  test_ml_status_ui.py  test_performance.py  test_prediction_pipeline.py  test_sepa_parser.py  test_settings_manual.py  test_settings_ml_ui.py  test_static_serving.py  test_training_fixes.py  test_transaction_table.py  test_upload_ml_integration.py  test_upload_no_model_messaging.py  test_upload_progress_htmx.py  test_web_navigation_and_layout.py  test_xss_hardening.py
tests/fixtures/: sample_transactions.csv
tests/test_simulations/: __init__.py  test_core.py  test_data_sources.py  test_scenarios.py
tests_js/: analytics.test.js  analytics_page.test.js
web/: __init__.py  routes.py
web/components/: __init__.py  alerts.py  buttons.py  layout.py  pagination.py
web/pages/: __init__.py  analytics_page.py  export_page.py  home_page.py  import_page.py  review_page.py  settings_page.py
