[project]
name = "fafycat"
version = "0.1.0"
description = "Local-first transaction categorization with ML"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "Apache License 2.0"}
authors = [
    {name = "David Wilde"},
]
maintainers = [
    {name = "David Wilde"},
]
keywords = ["finance", "budgeting", "machine-learning", "transaction-categorization", "privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business :: Financial :: Accounting",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pyarrow>=23.0.0",
    "python-dateutil>=2.9.0.post0",
    "python-fasthtml>=0.12.19",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]

[project.urls]
Homepage = "https://github.com/davidchris/fafycat"
Repository = "https://github.com/davidchris/fafycat"
Issues = "https://github.com/davidchris/fafycat/issues"
Documentation = "https://github.com/davidchris/fafycat#readme"
dependencies = [
    "alembic>=1.16.1",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "lightgbm>=4.6.0",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "pydantic>=2.11.5",
    "python-dateutil>=2.9.0.post0",
    "python-fasthtml>=0.12.19",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]


[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]

select = [
	"E", "W",
	"F",
	"UP",
	"B",
	"SIM",
	"I",
	"C90",
	"RET505", "RET508",
	"G",
	"TRY400", "TRY401",
	"PLE",
	"T"
]

exclude = ["*.ipynb"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"api/*.py" = ["B008"]
"api/upload.py" = ["E501", "W291"]  # Allow long lines and whitespace for HTML content in upload responses
"run_*.py" = ["T201"]  # Allow print statements in runner scripts
"scripts/*.py" = ["T201", "C901"]  # Allow print statements and complex functions in scripts
"src/fafycat/ml/*.py" = ["T201"]  # Allow print statements in ML modules for training feedback
"src/fafycat/data/*.py" = ["C901", "B007"]  # Allow complex functions and unused loop vars in data processing
"web/pages/*.py" = ["E501", "W291", "W293"]  # Allow long lines and whitespace for HTML/SVG content
"tests/*.py" = ["E402", "F401", "T201", "SIM108", "F841", "E501", "W291", "I001", "RET505"]  # Relax linting for tests
"test_*.py" = ["E402", "F401", "T201", "SIM108", "F841", "E501", "W291", "I001", "RET505"]  # Relax linting for test files

[tool.ty.src]
exclude = ["tests/", "*.ipynb"]

[tool.ty.environment]
python = ".venv"

[tool.ty.rules]
# Core type checking - keep as errors
invalid-return-type = "warn"  # Many false positives from fasthtml
invalid-assignment = "error"

# Reduce noise from external libraries (fasthtml, pandas have incomplete stubs)
invalid-argument-type = "warn"
invalid-type-form = "ignore"
not-subscriptable = "warn"
possibly-missing-attribute = "warn"
invalid-parameter-default = "warn"  # Common Python pattern: x: T = None

# Handle unresolved imports gracefully for external libs without stubs
unresolved-import = "warn"

# Equivalent to mypy's warn_unused_ignores
unused-ignore-comment = "warn"

# datetime.utcnow in SQLAlchemy Column defaults is acceptable pattern
deprecated = "warn"

# Exclude simulation notebooks and scripts from type checking
[[tool.ty.overrides]]
include = ["simulations/", "scripts/"]

[tool.ty.overrides.rules]
invalid-return-type = "ignore"
invalid-assignment = "ignore"
invalid-argument-type = "ignore"
unresolved-reference = "ignore"

[tool.ty.terminal]
output-format = "full"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=6.1.1",
]
