[build-system]
requires = ["uv_build>=0.11.5,<0.12.0"]
build-backend = "uv_build"

[project]
name = "fafycat"
version = "0.1.0"
description = "Local-first transaction categorization with ML"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "David Wilde"},
]
maintainers = [
    {name = "David Wilde"},
]
keywords = ["finance", "budgeting", "machine-learning", "transaction-categorization", "privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "lightgbm>=4.6.0",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "platformdirs>=4.0",
    "pydantic>=2.0",
    "python-dateutil>=2.9.0.post0",
    "python-fasthtml>=0.12.19",
    "requests>=2.33.0",
    "scikit-learn>=1.7.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]

[project.scripts]
fafycat = "fafycat.cli:main"

[project.urls]
Homepage = "https://github.com/davidchris/fafycat"
Repository = "https://github.com/davidchris/fafycat"
Issues = "https://github.com/davidchris/fafycat/issues"
Documentation = "https://github.com/davidchris/fafycat#readme"

[tool.uv]
exclude-newer = "7 days"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]

select = [
	"E", "W",
	"F",
	"UP",
	"B",
	"SIM",
	"I",
	"C90",
	"RET505", "RET508",
	"G",
	"TRY400", "TRY401",
	"PLE",
	"T"
]

exclude = ["*.ipynb"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"src/fafycat/api/*.py" = ["B008"]
"src/fafycat/api/upload.py" = ["E501", "W291"]  # Allow long lines and whitespace for HTML content in upload responses
"src/fafycat/api/transactions.py" = ["E501", "W291"]  # Allow long lines for HTML content in HTMX responses
"src/fafycat/cli.py" = ["T201"]  # Allow print statements in CLI
"scripts/*.py" = ["T201", "C901"]  # Allow print statements and complex functions in scripts
"src/fafycat/ml/*.py" = ["T201"]  # Allow print statements in ML modules for training feedback
"src/fafycat/data/*.py" = ["C901", "B007"]  # Allow complex functions and unused loop vars in data processing
"src/fafycat/web/components/*.py" = ["E501", "W291"]  # Allow long lines for HTML content in layout components
"src/fafycat/web/pages/*.py" = ["E501", "W291", "W293"]  # Allow long lines and whitespace for HTML/SVG content
"tests/*.py" = ["E402", "F401", "T201", "SIM108", "F841", "E501", "W291", "I001", "RET505"]  # Relax linting for tests
"test_*.py" = ["E402", "F401", "T201", "SIM108", "F841", "E501", "W291", "I001", "RET505"]  # Relax linting for test files

[tool.ty.src]
exclude = ["tests/", "*.ipynb", ".ipynb_checkpoints/", ".claude/"]

[tool.ty.environment]
python = ".venv"

[tool.ty.rules]
# Core type checking - keep as errors
invalid-return-type = "warn"  # Many false positives from fasthtml
invalid-assignment = "error"

# Reduce noise from external libraries (fasthtml, pandas have incomplete stubs)
invalid-argument-type = "warn"
invalid-type-form = "ignore"
not-subscriptable = "warn"
possibly-missing-attribute = "warn"
invalid-parameter-default = "warn"  # Common Python pattern: x: T = None

# Handle unresolved imports gracefully for external libs without stubs
unresolved-import = "warn"

# Equivalent to mypy's warn_unused_ignores
unused-ignore-comment = "warn"

# datetime.utcnow in SQLAlchemy Column defaults is acceptable pattern
deprecated = "warn"

# Relax type checking for experimental scripts and simulation notebooks.
# These directories import optional ML deps (torch, sentence_transformers, transformers,
# peft, mlx_lm, optuna, ...) declared in [dependency-groups] (experiments, mlx, finetune)
# that are intentionally absent from the default .venv. Install with
# `uv sync --group <name>` before running such a script.
[[tool.ty.overrides]]
include = ["simulations/", "scripts/"]

[tool.ty.overrides.rules]
invalid-return-type = "ignore"
invalid-assignment = "ignore"
invalid-argument-type = "ignore"
unresolved-reference = "ignore"
unresolved-import = "ignore"
not-subscriptable = "ignore"

[tool.ty.terminal]
output-format = "full"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-m", "not manual and not requires_server and not perf",
]
markers = [
    "slow: tests that take >2s (deselect with '-m \"not slow\"')",
    "manual: hardcodes real dev DB paths or mutates filesystem; opt-in only (use '-m manual')",
    "requires_server: needs a live HTTP server on localhost; opt-in only",
    "perf: performance/benchmark tests; opt-in only",
    "integration: exercises multiple layers (DB + API + ML); hermetic but heavy",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.4",
    "matplotlib>=3.10.6",
    "nbconvert>=7.17.1",
    "pytest>=9.0.3",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=6.1.1",
]
experiments = [
    "matplotlib>=3.10.6",
    "optuna>=4.7.0",
    "pyarrow>=23.0.0",
    "sentence-transformers>=5.2.2",
    "torch>=2.10.0",
]
mlx = [
    "mlx-lm>=0.30.6",
]
finetune = [
    "peft>=0.18.1",
    {include-group = "experiments"},
]
